--- a/style/style.css
+++ b/style/style.css
@@ -12,6 +12,9 @@ html {
 body {
 	font-family: 'Montserrat', sans-serif;
 	margin: 0;
+	color: #251d1d;
+	background: rgb(251, 138, 63);
+	background: radial-gradient(circle, rgba(251, 138, 63, 1) 0%, rgba(86, 151, 185, 1) 100%);
 }
 
 h1,
@@ -45,4 +48,75 @@ img {
 	max-width: 100%;
 	max-height: 100%;
 	object-fit: cover;
+}
+
+.btn-reset {
+	border: none;
+	padding: 0;
+	background-color: transparent;
+	cursor: pointer;
+}
+
+/*==========================*/
+
+.container {
+	max-width: 1300px;
+	padding: 40px 15px;
+	margin: 0 auto;
+}
+
+.hello {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.hello__left {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.hello__say {
+	max-width: 600px;
+}
+
+.hello__title {
+	margin-bottom: 20px;
+	font-weight: 700;
+	font-size: 3rem;
+	line-height: 1.2;
+}
+
+.hello__text {
+	margin-bottom: 60px;
+	font-weight: 400;
+	font-size: 2rem;
+	line-height: 1.2;
+}
+
+.hello__text:not(:last-child) {
+	margin-bottom: 15px;
+}
+
+.hello__btn {
+	padding: 30px 40px;
+	font-weight: 700;
+	font-size: 2rem;
+	border: 2px solid #6072bb;
+	border-radius: 20px;
+	color: #2d1b1b;
+	background: rgb(217, 179, 154);
+	background: radial-gradient(circle, rgba(217, 179, 154, 1) 0%, rgba(106, 152, 176, 1) 100%);
+	transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+.hello__btn:hover {
+	color: #4a4747;
+	transform: scale(1.2);
+}
+
+/*===========media========*/
+@media (max-width: 1200px) {
+	
 }
