--- a/style/style.css
+++ b/style/style.css
@@ -113,6 +113,7 @@ img {
 }
 
 .hello__btn {
+	margin-bottom: 30px;
 	padding: 30px 40px;
 	font-weight: 700;
 	font-size: 2vw;
@@ -127,6 +128,59 @@ img {
 .hello__btn:hover {
 	color: #4a4747;
 	transform: scale(1.2);
+}
+
+.hello__input {
+	display: none;
+}
+
+.user-name {
+	font-weight: 400;
+	font-size: 2vw;
+	line-height: 1.2;
+}
+
+.input {
+	display: block;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	padding: 10px 20px;
+	font-size: 2vw;
+	line-height: 1.2;
+	background-color: rgba(255, 255, 255, 0.5);
+	border: none;
+	border-radius: 20px;
+	transition: background-color 0.2s ease-in-out;
+}
+
+.input:focus {
+	background-color: #fff;
+}
+
+.input__btn {
+	margin-bottom: 10px;
+	padding: 10px 20px;
+	font-size: 26px;
+	text-transform: uppercase;
+	background-color: #fff;
+	opacity: 0.5;
+	border-radius: 20px;
+	transition: opacity 0.3s ease-in-out;
+}
+
+.input__btn:hover {
+	opacity: 1;
+}
+
+.output {
+	padding: 10px 20px;
+	font-weight: 400;
+	font-size: 2vw;
+	line-height: 1.2;
+	background-color: rgba(255, 255, 255, 0.5);
+	border-radius: 20px;
+	cursor: pointer;
+	transition: background-color 0.2s ease-in-out;
 }
 
 .hello__footer {
@@ -170,6 +224,12 @@ img {
 	}
 
 	.hello__btn {
+		font-size: 24px;
+	}
+
+	.user-name,
+	.input,
+	.output {
 		font-size: 24px;
 	}
 }
